<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:id="@+id/stockProduct"
              android:hint="@string/product_s_stock_add"
              android:inputType="number"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginTop="@dimen/top_stock_add"
              app:layout_constraintTop_toBottomOf="@+id/productName" android:layout_marginStart="@dimen/start_stock_ad"/>


    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:layout_constraintStart_toStartOf="parent"
              android:layout_marginStart="@dimen/start_name_add"
              android:hint="@string/product_s_name_add"
              android:id="@+id/productName"
              android:layout_marginTop="@dimen/top_name_add" app:layout_constraintTop_toTopOf="parent"/>

    <Button
            android:text="@string/add_product_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/addProductButton"
            android:layout_marginBottom="@dimen/bot_button_add"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="@dimen/start_button_add"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="@dimen/top_button_add" app:layout_constraintTop_toBottomOf="@+id/descriptionProduct"
            app:layout_constraintVertical_bias="0.655"/>

    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              app:layout_constraintStart_toStartOf="parent"
              android:id="@+id/descriptionProduct"
              android:hint="@string/product_s_description_add"
              android:layout_marginStart="@dimen/start_desc_add" android:layout_marginTop="@dimen/top_desc_add"
              app:layout_constraintTop_toBottomOf="@+id/stockProduct"/>

</android.support.constraint.ConstraintLayout>